deployments/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
spec:
  selector:
    app: demo
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
